[package]
name = "contrie"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
# TODO: Keywords, readmes, stuff..

[dependencies]
arrayvec = "~0.4"
bitflags = "~1"
crossbeam-epoch = "~0.7"
# TODO: Consider what to do with the union feature. Why is it still requiring nightly?
smallvec = "~0.6"

[dev-dependencies]
crossbeam-utils = "~0.6"
proptest = "~0.9.3"
rayon = "~1"

[profile.test]
# Some tests are rather slow. Furthermore, optimalisations tend to provoke races and UBs to
# manifest, so we want to try that in tests if possible.
opt-level = 1
