[package]
name = "contrie"
version = "0.1.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>", "Edoardo Rossi <zeroed@posteo.net>"]
edition = "2018"
description = "Concurrent map and set"
documentation = "https://docs.rs/contrie"
repository = "https://github.com/vorner/contrie"
readme = "README.md"
keywords = ["atomic", "concurrent", "map", "set", "lock-free"]
categories = ["concurrency", "algorithms", "data-structures"]
license = "Apache-2.0/MIT"

[dependencies]
arrayvec = "~0.4"
bitflags = "~1"
crossbeam-epoch = "~0.7"
# TODO: Consider what to do with the union feature. Why is it still requiring nightly?
smallvec = "~0.6"

[dev-dependencies]
crossbeam-utils = "~0.6"
proptest = "~0.9.3"
rayon = "~1"
rand = "~0.6"
version-sync = "~0.7"

[profile.test]
# Some tests are rather slow. Furthermore, optimalisations tend to provoke races and UBs to
# manifest, so we want to try that in tests if possible.
opt-level = 1
